feat(create): add create

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@
 logging.level.web=TRACE
 # on modifie le port découte du tomcat !
 server.port=8081
+
+# utilisation de vos paramètres de connexion
+spring.datasource.url=jdbc:postgresql://bbuybe1iwzkbcvbnl4nq-postgresql.services.clever-cloud.com:5432/bbuybe1iwzkbcvbnl4nq
+spring.datasource.username=u6nmyxvfw9qmbiknhgnf
+spring.datasource.password=OeIXkKf348mmbzdp9V5S
+
+# personnalisation de hibernate
+spring.jpa.hibernate.ddl-auto = create-drop
+
+# personnalisation du pool de connexions
+spring.datasource.hikari.maximum-pool-size=1
