feat(trainer): use password/username

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.hibernate.ddl-auto = create-drop
 
 # personnalisation du pool de connexions
 spring.datasource.hikari.maximum-pool-size=1
+
+#Security configuration
+spring.security.user.name=toche
+spring.security.user.password=f7db5f37-323d-4381-a151-25cecaf76417
